--- a/index.html
+++ b/index.html
@@ -5,11 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Calcolo biglietto del treno</title>
 </head>
 
 <body>
+    <main class="d-flex justify-content-center align-items-center">
+        <div class="main">
+            <h1>TRENITALIA</h1>
+            <div class="d-flex">
+                <h3>Età passeggero:</h3>
+                <h2 id="eta"></h2>
+            </div>
+            <div class="d-flex">
+                <h3>Km del tuo viaggio:</h3>
+                <h2 id="km"></h2>
+            </div>
+            <div class="d-flex">
+                <h3>Sconto:</h3>
+                <h2 id="sconto"></h2>
+            </div>
+            <div class="d-flex">
+                <h3>Prezzo Totale:</h3>
+                <h2 id="prezzo"></h2>
+            </div>
+        </div>
+    </main>
     <script src="./assets/js/main.js"></script>
 </body>
 
